--- a/west.yml
+++ b/west.yml
@@ -10,118 +10,118 @@ manifest:
   projects:
     - name: app_source_file_template_module
       path: modules/lib/laird_connect/app_source_file_template
-      revision: main
+      revision: 77660b831cb70e02e6b9808f96d5f3fa621286e7
       remote: CanvasDM
     - name: Attributes
       path: modules/lib/laird_connect/attributes
-      revision: main
+      revision: 7c12c78a182fbce22af33fc1caeaa5830fb0db97
       remote: LairdCP
     - name: ble_gateway_device_manager_module
       path: modules/lib/laird_connect/ble_gateway_device_manager
-      revision: main
+      revision: a32ef9ba2067027f278e53e2444c13d6297e548b
       remote: CanvasDM
     - name: ble_gateway_dm_firmware
-      revision: main
+      revision: 61e53addce62c83f95b593595abc9ad13b06df80
       remote: CanvasDM
     - name: cmake_functions_module
       path: modules/lib/laird_connect/cmake_functions
-      revision: main
+      revision: 0f2eae9efac2078f6ac0fbc89f24a8992935e150
       remote: CanvasDM
     - name: jsmn_module
       path: modules/lib/jsmn
-      revision: main
+      revision: e534451c62d04eba5a6c6d9a93315255cf9dd399
       remote: CanvasDM
     - name: lcz_hw_key_module
       path: modules/lib/laird_connect/lcz_hw_key
-      revision: main
+      revision: 854ba1bf008c5269cf8b7b490e1ee6b6bafce6c3
       remote: CanvasDM
     - name: lcz_lwm2m_util_module
       path: modules/lib/laird_connect/lcz_lwm2m_util
-      revision: main
+      revision: 5a3152a10ac00317103a566f59ed36657831459d
       remote: CanvasDM
     - name: lcz_mqtt_module
       path: modules/lib/laird_connect/lcz_mqtt
-      revision: main
+      revision: 29a2fe1833e949a9ccc34efd14d2fb24b3925608
       remote: CanvasDM
     - name: lcz_sensor_telemetry_app_module
       path: modules/lib/laird_connect/lcz_sensor_telemetry_app
-      revision: main
+      revision: aac74384435ba0e1ae8fbf6a1a01178f2ef4ff45
       remote: CanvasDM
     - name: locking_module
       path: modules/lib/laird_connect/locking
-      revision: main
+      revision: ccac2d53d50ef9d4b28c962d94de3f615e46a9d8
       remote: CanvasDM
     - name: lwm2m_client_module
       path: modules/lib/laird_connect/lwm2m_client
-      revision: main
+      revision: e3e23b37b1e51e1814b85843f1028834e0e67821
       remote: CanvasDM
     - name: lwm2m_file_system_management_module
       path: modules/lib/laird_connect/lwm2m_file_system_management
-      revision: main
+      revision: 281da241a0ad397a1a53272c2fcc494707d9fc59
       remote: CanvasDM
     - name: lwm2m_connectivity_monitor_module
-      revision: main
+      revision: 0d20229afd70d9683f9086b21ee23272849672f6
       path: modules/lib/laird_connect/lwm2m_connectivity_monitor
       remote: CanvasDM
     - name: lwm2m_ipso_current_module
       path: modules/lib/laird_connect/lwm2m_ipso_current
-      revision: main
+      revision: 181a60b9e13c25a8b3f962f24576924686709e41
       remote: CanvasDM
     - name: lwm2m_ipso_pressure_module
       path: modules/lib/laird_connect/lwm2m_ipso_pressure
-      revision: main
+      revision: 1d455725088f63016995ad153c8bb46e8dd99fc7
       remote: CanvasDM
     - name: lwm2m_ipso_fill_level_module
       path: modules/lib/laird_connect/lwm2m_ipso_fill_level
-      revision: main
+      revision: 9e38b587ace96a4860835f800fae0ec30561ba69
       remote: CanvasDM
     - name: lwm2m_ipso_temperature_module
       path: modules/lib/laird_connect/lwm2m_ipso_temperature
-      revision: main
+      revision: 2b0a3112ae6d7fc54bbe895bd43f3a9bc3a28506
       remote: CanvasDM
     - name: lwm2m_firmware_update_module
       path: modules/lib/laird_connect/lwm2m_firmware_update
-      revision: main
+      revision: ae593439112c144db035c2ef1bd23eb399f53828
       remote: CanvasDM
     - name: lwm2m_gateway_obj_module
       path: modules/lib/laird_connect/lwm2m_gateway_obj
-      revision: main
+      revision: fea3b0cfa4b8e989f99d4c066f4d0114168fc084
       remote: CanvasDM
     - name: lwm2m_gateway_proxy_module
       path: modules/lib/laird_connect/lwm2m_gateway_proxy
-      revision: main
+      revision: 291cf853a5a8e37f56e68be4226e103391affa0f
       remote: CanvasDM
     - name: lwm2m_ucifi_battery_module
       path: modules/lib/laird_connect/lwm2m_ucifi_battery
-      revision: main
+      revision: 4a323b1a579660fbe48b8fcdda55814b88b9166c
       remote: CanvasDM
     - name: lwm2m_software_management_module
       path: modules/lib/laird_connect/lwm2m_software_management
-      revision: main
+      revision: 57c23a23000d458302a44a70e5885a6bc4c7e52d
       remote: CanvasDM
     - name: memfault-firmware-sdk
       path: modules/lib/memfault-firmware-sdk
-      revision: 0.33.4
+      revision: 5a265a6078d9301e7416b18cd08bd7a2ea7afa3f
       remote: LairdCP
     - name: modem_hl7800_module
       path: modules/lib/laird_connect/modem_hl7800
-      revision: main
+      revision: 4500052f6ed124798a7155ca1438bab90fef3f52
       remote: CanvasDM
     - name: network_monitor_module
       path: modules/lib/laird_connect/network_monitor
-      revision: main
+      revision: bb7908926648ab07ee69c4308dfd3cf334cc5efe
       remote: CanvasDM
     - name: pki_auth_module
       path: modules/lib/laird_connect/pki_auth
-      revision: main
+      revision: d03ce25dbd16b27e3401de1fdf296fee89df53bb
       remote: CanvasDM
     - name: power_module
       path: modules/lib/laird_connect/power
-      revision: main
+      revision: a199216134a5aa96476b4fe881c951f0713e6089
       remote: CanvasDM
     - name: sdk-nrf
       path: nrf
-      revision: laird/ncs_2.1.0-1
+      revision: 9a9d1a5c4f5483a7c55b259df69346b702987238
       remote: LairdCP
       import:
         # Please keep this list sorted alphabetically.
@@ -143,18 +143,18 @@ manifest:
           - sdk-lc3
     - name: shell_login_module
       path: modules/lib/laird_connect/shell_login
-      revision: main
+      revision: eb57e69107196b3e737b6863366235a33a2083e0
       remote: CanvasDM
     - name: shell_script_runner_module
       path: modules/lib/laird_connect/shell_script_runner
-      revision: main
+      revision: 62a27f8fdf5163efa811dd64112f7807375273a0
       remote: CanvasDM
     - name: system_message_task_module
       path: modules/lib/laird_connect/system_message_task
-      revision: main
+      revision: 2b306a77a09df6037635d1e7bd3520729e8c1d44
       remote: CanvasDM
     - name: zephyr
-      revision: laird/ncs_2.1.0-1
+      revision: 5ad267bc152950d3d4df096b036818b47f52dd0f
       remote: LairdCP
       import:
         # In addition to the zephyr repository itself, NCS also
@@ -186,12 +186,12 @@ manifest:
           - zcbor
     - name: zephyr_lib
       path: modules/lib/laird_connect/zephyr_lib
-      revision: main
+      revision: c5db60e1a3fd580671f793144d86089b56dfc600
       remote: LairdCP
     # Framework must be placed after all components
     - name: zephyr_framework
       path: modules/lib/laird_connect/framework
-      revision: main
+      revision: fce9383112ae2b308195e618ba51c5bed8e4c014
       remote: LairdCP
   self:
     path: ble_gateway_dm_firmware_public_manifest
